--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server",
-    "build": "webpack webpack.config.js"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
