--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "es6-promise": "^3.1.2",
     "express": "^4.13.4",
     "hjson": "^1.8.1",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^15.0.1",
     "react-addons-css-transition-group": "^15.0.1"
   }
